# kvaser-to-pcan-dll

./: .gitignore  CMakeLists.txt  canlib32.def
.github/workflows/: build.yml
include/: PCANBasic.h
src/: canlib32.cpp  dllmain.cpp  logger.h
